# Particle

./: CMakeLists.txt  README.md  main.cpp
src/: Angles.h  Comparison.h  Particle.cpp  Particle.h  Plane.cpp  Plane.h  Point.h  Probability.h  Sizes.h  TypeParticle.h  UnitVector.h  UsefulFeatures.cpp  UsefulFeatures.h
